--- a/src/web-ng/src/app/shared/containers/home/home.component.html
+++ b/src/web-ng/src/app/shared/containers/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="wrapper">
+    <kendo-tabstrip (tabSelect)="onTabSelect($event)">
+        <kendo-tabstrip-tab title="Log In" [selected]="true">
+            <ng-template kendoTabContent>
+                <app-login></app-login>
+            </ng-template>
+        </kendo-tabstrip-tab>
+        <kendo-tabstrip-tab title="Sign Up">
+            <ng-template kendoTabContent>
+                <app-register></app-register>
+            </ng-template>
+        </kendo-tabstrip-tab>
+    </kendo-tabstrip>
+</div>
