--- a/src/web-ng/src/app/shared/containers/register/register.component.html
+++ b/src/web-ng/src/app/shared/containers/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+<form [formGroup]="registerForm">
+    <div fxLayout="column" fxLayoutAlign="space-evenly center">
+        <kendo-floatinglabel text="User Name">
+            <input type="text" formControlName="userName" kendoTextBox>
+            <!-- <kendo-textbox placeholder="User Name" formControlName="userName">
+            </kendo-textbox> -->
+        </kendo-floatinglabel>
+        <kendo-floatinglabel text="Email">
+            <input type="email" formControlName="email" kendoTextBox>
+        </kendo-floatinglabel>
+        <kendo-floatinglabel text="Password">
+            <input type="password" formControlName="password" kendoTextBox>
+        </kendo-floatinglabel>
+        <kendo-floatinglabel text="Confirm Password">
+            <input type="password" formControlName="password" kendoTextBox>
+        </kendo-floatinglabel>
+        <!-- <div>
+            <input type="checkbox" kendoCheckBox><kendo-label>Please accept the terms and agreement</kendo-label>
+        </div> -->
+        <div fxLayout="row" fxLayoutAlign="space-around center">
+            <button kendoButton [disabled]="registerForm.invalid" (click)="onSubmit()">Sign Up</button>
+            <button kendoButton (click)="resetForm()">Reset</button>
+        </div>
+    </div>
+</form>
